Fix: div name overlapping solved

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     display: flex;
     padding-left: 20px;
     padding-right: 20px;
+    
 }
 .logo{
     line-height: 120px;
@@ -295,7 +296,7 @@ a{
     margin-top: 100px;
 }
 
-.login {
+.login2 {
     width: 35%;
     height: 300px;
     background-color: #242424;
